# rk3588_visual_analysis_framework

./: .gitignore  README.md  development_log.md  install_deps.sh
.claude/: settings.local.json
.claude/skills/rk3588-channel-logic/: SKILL.md
.claude/skills/rk3588-channel-logic/references/: channelcontext-api.md  rk3588_yolo_系统说明文档.md  upload-and-wiring.md
.claude/skills/rk3588-console-ops/references/: debugging-playbook.md
.claude/skills/rk3588-global-logic/: SKILL.md
docs/: development_log.md  二次开发课程大纲.md  大模型开发提示词模板.md
docs/skills/: README.md
docs/skills/rk3588-channel-logic/: SKILL.md
docs/skills/rk3588-channel-logic/references/: adding-config-parameter.md  channelcontext-api.md  logic-naming-and-registration.md  rk3588_yolo_架构图.md  rk3588_yolo_系统说明文档.md  upload-and-wiring.md
docs/skills/rk3588-console-ops/: SKILL.md
docs/skills/rk3588-console-ops/references/: debugging-playbook.md  services-upload-and-ota.md  web-console-frontend.md
docs/skills/rk3588-global-logic/: SKILL.md
docs/skills/rk3588-src-modules/: README.md  analyzer.md  capturer.md  config.md  core.md  logic.md  player.md  uploader.md  yolo.md
rk3588_yolo/: CMakeLists.txt  build.sh  install_app.sh  rk3588_yolo
rk3588_yolo/assets/: config.json  config_dify4_person.json  config_global_test.json  config_hook.json  config_lesson10.json  config_mux9.json  config_usb.json  hook.rknn  huojia_v8n.rknn  labels_hook.txt  labels_huojia.txt  labels_wafer.txt  labels_wash.txt  roi_zones.json  wafer.rknn  wash.rknn  yolov5n.rknn
rk3588_yolo/src/: .clang-format  format_code.py  main.cpp  system.h
rk3588_yolo/src/analyzer/: README.md  algoProcess.cpp  algoProcess.h  algo_engine.cpp  algo_internal.h  analyzer.cpp  analyzer.h  analyzer_internal.h  channel_pipeline.cpp  display_pipeline.cpp  display_render.cpp  frame_inlet.cpp  frame_pipeline.cpp  frame_pipeline.h  result_dispatch.cpp  rga_convert.cpp  tracker.cpp  tracker.h
rk3588_yolo/src/capturer/: README.md  decChannel.cpp  decChannel.h
rk3588_yolo/src/config/: README.md  config.cpp  config.h  config_init.cpp  config_registry.cpp  config_registry.h  config_validator.cpp  config_validator.h
rk3588_yolo/src/core/: README.md  app_ctrl.cpp  app_ctrl.h  base64_util.cpp  base64_util.h  constants.h  image_utils.cpp  image_utils.h  pause_ctrl.cpp  pause_ctrl.h
rk3588_yolo/src/logic/: README.md  channel_logic.cpp  channel_logic.h  global_logic.cpp  global_logic.h  logic_common.h  logic_cross_camera.cpp  logic_custom.cpp  logic_default.cpp  logic_dify.cpp  logic_dify_person_verify.cpp  logic_fall_detect.cpp  logic_hook.cpp  logic_lesson1.cpp  logic_lesson10.cpp  logic_lesson2.cpp  logic_lesson3_det.cpp  logic_lesson3_pose.cpp  logic_lesson3_seg.cpp  logic_lesson4.cpp  logic_lesson5.cpp  logic_lesson6.cpp  logic_lesson7.cpp  logic_lesson8.cpp  logic_lesson9.cpp  logic_multi_roi.cpp  logic_path_sop.cpp  logic_person_alarm.cpp  logic_roi.cpp  logic_roll.cpp  logic_server.cpp  logic_tools.cpp  logic_tools.h  logic_wafer.cpp  logic_wafer2.cpp  logic_wafer_sop.cpp  logics.json
rk3588_yolo/src/player/: README.md  display.cpp  display.h  rtsp_streamer.cpp  rtsp_streamer.h  text_overlay.cpp  text_overlay.h
rk3588_yolo/src/uploader/: README.md  alarm_uploader.cpp  alarm_uploader.h
rk3588_yolo/src/yolo/: README.md  model_base.h  yolo.cpp  yolo.h  yolo_utils.h  yolopose.cpp  yolopose.h  yoloseg.cpp  yoloseg.h  yolov8det.cpp  yolov8det.h
rk3588_yolo/test_6_17/: logics.json  rk3588_yolo  run.sh  setup_python.sh  stop.sh
rk3588_yolo/test_6_17/assets/: config_lesson2.json
rk3588_yolo/test_6_17/libs/: libgstvideo-1.0.so.0  libhiredis.so.0.14  librga.so.2
rk3588_yolo/test_6_17/services/model_update/: README.md  ota_agent.py  ota_config.json  requirements.txt
rk3588_yolo/test_6_17/services/upload/: requirements.txt
rk3588_yolo/test_sop/: deploy.sh  logics.json  rk3588_yolo
rk3588_yolo/test_sop/assets/: circle.rknn  config_lesson1.json  config_sop.json
rk3588_yolo/test_sop/libs/: libglib-2.0.so.0  libgobject-2.0.so.0  libgstallocators-1.0.so.0  libgstreamer-1.0.so.0  libgstrtspserver-1.0.so.0
rk3588_yolo/test_sop/services/model_update/: ota_agent.py
rk3588_yolo/test_sop/services/upload/: README.md
rk3588_yolo/tests/: README.md
rk3588_yolo/tests/test_dify/: CMakeLists.txt  build.sh  dify_queue_consumer_test.py  dify_queue_producer_test  dify_queue_producer_test.cpp  prompt.yaml
rk3588_yolo/tests/test_server/: CMakeLists.txt  build.sh  outbox_consumer_test.py  server_queue_producer_test.cpp
service/upload/: config.yaml  main.py
web_console/: install.sh  rk3588-console.service  stop.sh
web_console/backend/: main.py  requirements.txt
web_console/backend/models/: config_schema.py
web_console/backend/routers/: apps.py  assets.py  auth.py  config_io.py  logs.py  ota_config.py  process.py  records.py  services.py  snapshot.py  stream.py  terminal.py  upload_config.py
web_console/backend/services/: app_scanner.py  auth_service.py  log_buffer.py  log_streamer.py  process_manager.py
web_console/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web_console/frontend/src/: App.css  App.tsx  index.css
web_console/frontend/src/api/: client.ts
web_console/frontend/src/components/: AssetPicker.tsx  ErrorBoundary.tsx  GlobalLogicsPanel.css  GlobalLogicsPanel.tsx  GlobalSettingsPanel.css  GlobalSettingsPanel.tsx  NodeConfigPanel.css  NodeConfigPanel.tsx  NumberField.tsx  ROIModal.css  ROIModal.tsx  ServiceConfigModal.tsx  ServicesPanel.tsx  SopFlowModal.css  SopFlowModal.tsx
web_console/frontend/src/nodes/: ChannelNode.tsx  GlobalLogicNode.tsx  GlobalNode.tsx  LogicNode.tsx  ModelNode.tsx  ROINode.css  ROINode.tsx  ReportNode.tsx  SopNode.tsx  SopStepNode.tsx  StreamNode.tsx  nodeStyles.css
web_console/frontend/src/pages/: AppsPage.css  AppsPage.tsx  EditorPage.css  EditorPage.tsx  LoginPage.css  LoginPage.tsx  LogsPage.css  LogsPage.tsx  RecordsPage.css  RecordsPage.tsx  TerminalPage.css  TerminalPage.tsx  terminalSession.ts
web_console/frontend/src/store/: authStore.ts  consoleStore.ts  editorStore.ts  (+2 more)
(+33 files in other folders)
